--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <h2 class="milk_text">Featured Brands</h2>
 
         <!--/////////// Featured Brands //////////-->
+      <div class="featured">
         <section class="shadow">
           <figure>
             <img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
@@ -133,8 +134,9 @@
           </ul>
         </section>
         <!--/////////// End Archive List //////////-->
-
+      </div>
         <!--/////////// Deals //////////-->
+      <div class="deals">
         <section class="shadow">
           <figure>
             <img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
@@ -165,7 +167,7 @@
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </section>
         <!--/////////// Ends Deals //////////-->
-
+      </div>
       </div><!-- .wrapper -->
 
     </div><!-- #wood -->
